add_library(tlpi STATIC
        alt_functions.c
        alt_functions.h
        become_daemon.c
        become_daemon.h
        binary_sems.c
        binary_sems.h
        create_pid_file.c
        create_pid_file.h
        curr_time.c
        curr_time.h
        ename.c.inc
        error_functions.c
        error_functions.h
        event_flags.c
        event_flags.h
        file_perms.c
        file_perms.h
        get_num.c
        get_num.h
        inet_sockets.c
        inet_sockets.h
        itimerspec_from_str.c
        itimerspec_from_str.h
        print_rlimit.c
        print_rlimit.h
        print_rusage.c
        print_rusage.h
        print_wait_status.c
        print_wait_status.h
        pty_fork.c
        pty_fork.h
        pty_master_open.c
        pty_master_open.h
        rdwrn.c
        rdwrn.h
        read_line.c
        read_line.h
        read_line_buf.c
        read_line_buf.h
        region_locking.c
        region_locking.h
        semun.h
        signal.c
        signal_functions.c
        signal_functions.h
        tlpi_hdr.h
        tty_functions.c
        tty_functions.h
        ugid_functions.c
        ugid_functions.h
        unix_sockets.c
        unix_sockets.h
        )